footer alignment correction

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ header{
     justify-content: space-between;
     align-items: center;
     background-color: rgb(5, 5, 52);
-    width: 100%;
+    min-width: 100%;
     height: 90px;
 }
 .my_name{
@@ -73,8 +73,8 @@ header{
 
 .Img_part img{
     width: 50%;
-    margin:-60px 0 -20px 300px;
-    border-radius: 150px;
+    margin:0 0 0 184px;
+    border-radius: 5%;
     border: none;
 }
 
@@ -318,12 +318,13 @@ h5{
     justify-content: space-between;
     padding: 10px 0;
     width: 100%;
-    height: 22vh;
+    height: 100%;
 }
 
-.copyrightcontainer{
-    position:relative;
-    left:79%;}
+.copyrightcontainer span{
+   float: right;
+    
+}
 
     h6{
         margin: 15px 10px;
